--- a/imports/ui/components/mongo-data.html
+++ b/imports/ui/components/mongo-data.html
@@ -2,7 +2,7 @@
   <template>
       <template is="dom-repeat" items="{{todos}}" index-as="index">
         <paper-input value={{item.name}}></paper-input>
-        <button on-click="_deleteItem">Delete</button>
+        <button on-click="_deleteItem">Delete Button</button>
       </template>
       {{testdata}}
   </template>
