--- a/imports/ui/components/adornis-nebenkosten.html
+++ b/imports/ui/components/adornis-nebenkosten.html
@@ -3,20 +3,70 @@
         <style is="custom-style" include="iron-flex iron-flex-alignment adornis adornis-tables"></style>
         <style>
         </style>
-        <div class="layout horizontal">
+        <!-- <div class="layout horizontal">
             <div class="layout vertical" style="padding: calc(.5em + 6px)">
                 <div numeric style="padding: 6px">heizBetriebsKosten: {{_(heizBetriebsKosten, 2, "Eur")}}</div>
                 <div numeric style="padding: 6px">Wasserkosten: {{_(kaltwasserKosten, 2, "Eur")}}</div>
             </div>
             <table style="width: auto">
                 <tr><td numeric>+ Miete: {{_(m_heizkostenZaehler, 2, "Eur")}} = </td><td numeric>Heizkosten: {{_(gesamtHeizKosten, 2, "Eur")}}</td></tr>
-                <tr><td numeric>+ Miete: {{_(m_warmwasserZaehler, 2, "Eur")}} = </td><td numeric>Warmwasserkosten: {{_(gesamtWarmwasserkosten, 2, "Eur")}}</td></tr>
+                <tr><td numeric>+ Miete: {{_(m_warmwasserZaehler, 2, "Eur")}} = </td><td numeric>Warmwasserkosten: {{_(gesamtWarmwasserKosten, 2, "Eur")}}</td></tr>
                 <tr><td numeric>+ Miete: {{_(m_kaltwasserZaehler, 2, "Eur")}} = </td><td numeric>Kaltwasserkosten: {{_(gesamtKaltwasserKosten, 2, "Eur")}}</td></tr>
             </table>
-        </div>
+        </div> -->
 
-        <table>
-
+        <h1>Preise je Einheit</h1>
+        <table style="margin-bottom: 32px">
+            <thead>
+                <thead>
+                    <tr><th></th><th>Gesamtpreis</th><th></th><th>Anzahl Einheiten</th><th></th><th>Preis je Einheit</th></tr>
+                </thead>
+                <thead>
+                    <tr><th>Heizkosten</th></tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>30% Grundkosten</td>
+                        <td numeric>{{_(grundHeizKosten, 2)}}</td><td unit>&euro;</td>
+                        <td numeric divided>{{_(quadratmeterHeizflaeche, 2)}}</td><td unit>m<sup>2</sup></td>
+                        <td numeric equal>{{_(heizkostenProM2, 4)}}</td><td unit>&euro;/m<sup>2</sup></td>
+                    </tr>
+                    <tr>
+                        <td>70% Verbrauchskosten</td>
+                        <td numeric>{{_(verbrauchsHeizKosten, 2)}}</td><td unit>&euro;</td>
+                        <td numeric divided>{{heizeinheiten}}</td><td unit>E</td>
+                        <td numeric equal>{{_(heizkostenProEinheit, 4)}}</td><td unit>&euro;/E</td>
+                    </tr>
+                </tbody>
+                <thead>
+                    <tr><th>Warmwasserkosten</th></tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>30% Grundkosten</td>
+                        <td numeric>{{_(grundWarmwasserKosten, 2)}}</td><td unit>&euro;</td>
+                        <td numeric divided>{{_(quadratmeterHeizflaeche, 2)}}</td><td unit>m<sup>2</sup></td>
+                        <td numeric equal>{{_(warmwasserkostenProM2, 4)}}</td><td unit>&euro;/m<sup>2</sup></td>
+                    </tr>
+                    <tr>
+                        <td>70% Verbrauchskosten</td>
+                        <td numeric>{{_(verbrauchsWarmwasserKosten, 2)}}</td><td unit>&euro;</td>
+                        <td numeric divided>{{_(warmwasserVerbrauch, 2)}}</td><td unit>m<sup>3</sup></td>
+                        <td numeric equal>{{_(warmwasserkostenProM3, 4)}}</td><td unit>&euro;/m<sup>3</sup></td>
+                    </tr>
+                </tbody>
+                <thead>
+                    <tr><th>Kaltwasserkosten</th></tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>100% Verbrauchskosten</td>
+                        <td numeric>{{_(kaltwasserKosten, 2)}}</td><td unit>&euro;</td>
+                        <td numeric divided>{{_(kaltwasserVerbrauchInklAllgemein, 2)}}</td><td unit>m<sup>3</sup></td>
+                        <td numeric equal>{{_(kaltwasserkostenProM3, 4)}}</td><td unit>&euro;/m<sup>3</sup></td>
+                    </tr>
+                </tbody>
+            </thead>
         </table>
 
     </template>
@@ -50,7 +100,7 @@ class AdornisNebenkosten extends AdornisPolymerRedux(Polymer.Element) {
             heizeinheiten: {
                 type: Number, value: 97419, statePath: 'heizeinheiten', dispatch: true,
             },
-            wasserKosten: { type: Number, value: 2627.82 },
+            wasserKosten: { type: Number, statePath: 'wasserKosten' },
 
             // heizungsanlage sind alle kosten, die zum heizen beitragen
             heizBetriebsKosten: { type: Number, value: 4912.77 },
@@ -69,7 +119,7 @@ class AdornisNebenkosten extends AdornisPolymerRedux(Polymer.Element) {
             warmwasserBereitungskosten: { type: Number, computed: '_mul(warmwasserAnteilVonbrennstoffVerbrauch, heizBetriebsKostenProKwh)' },
             kostenKaltwasserFuerWarmwasser: { type: Number, computed: '_mul(warmwasserVerbrauch, wasserkostenProM3)' },
             m_warmwasserZaehler: { type: Number, value: 334.56 },
-            gesamtWarmwasserkosten: {
+            gesamtWarmwasserKosten: {
                 type: Number, computed: '_sum(kostenKaltwasserFuerWarmwasser, warmwasserBereitungskosten, m_warmwasserZaehler)', statePath: 'gesamtWarmwasserKosten', dispatch: true,
             },
 
@@ -88,6 +138,28 @@ class AdornisNebenkosten extends AdornisPolymerRedux(Polymer.Element) {
                 type: Number, computed: '_sum(kaltwasserKosten, m_kaltwasserZaehler)', statePath: 'gesamtKaltwasserKosten', dispatch: true,
             },
             wasserkostenProM3: { type: Number, computed: '_div(wasserKosten, wasserVerbrauch)' },
+
+            // grund vs verbrauchskosten
+
+            // grundkosten vs verbrauchskosten ratio
+            grundkostenRatioHeizung: { type: Number, value: 0.3 },
+            verbrauchskostenRatioHeizung: { type: Number, computed: '_sub(1, grundkostenRatioHeizung)' },
+            grundkostenRatioWarmwasser: { type: Number, value: 0.3 },
+            verbrauchskostenRatioWarmwasser: { type: Number, computed: '_sub(1, grundkostenRatioWarmwasser)' },
+
+            // anteilige kosten
+            grundHeizKosten: { type: Number, computed: '_mul(gesamtHeizKosten, grundkostenRatioHeizung)' },
+            verbrauchsHeizKosten: { type: Number, computed: '_mul(gesamtHeizKosten, verbrauchskostenRatioHeizung)' },
+            grundWarmwasserKosten: { type: Number, computed: '_mul(gesamtWarmwasserKosten, grundkostenRatioWarmwasser)' },
+            verbrauchsWarmwasserKosten: { type: Number, computed: '_mul(gesamtWarmwasserKosten, verbrauchskostenRatioWarmwasser)' },
+
+            // preise pro Einheit
+            heizkostenProM2: { type: Number, computed: '_div(grundHeizKosten, quadratmeterHeizflaeche)' },
+            heizkostenProEinheit: { type: Number, computed: '_div(verbrauchsHeizKosten, heizeinheiten)' },
+            warmwasserkostenProM2: { type: Number, computed: '_div(grundWarmwasserKosten, quadratmeterHeizflaeche)' },
+            warmwasserkostenProM3: { type: Number, computed: '_div(verbrauchsWarmwasserKosten, warmwasserVerbrauch)' },
+            kaltwasserkostenProM3: { type: Number, computed: '_div(gesamtKaltwasserKosten, kaltwasserVerbrauchInklAllgemein)' },
+
         };
     }
 
